--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -3,7 +3,7 @@
         <div class="grid">
             <div class="row logo">
                 <!--<p class="icon "></p>-->
-                <p class="title ion-arrow-graph-up-right">Finanças</p> 
+                <span class="title ion-arrow-graph-up-right">Finanças</span> 
             </div>
             <div class="row">
                 <a href="#/adicionar" class="column">
