--- a/www/templates/visualizar.html
+++ b/www/templates/visualizar.html
@@ -1,28 +1,33 @@
-<div class="content">
-    <div class="header">
-        
+<div class="visualizar">
+    <div class="title">
+        <a ng-href="#/home" class="button-left icon ion-chevron-left">Voltar</a>
+        <span class="titulo">Despesas</span> 
     </div>
-    <table>
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Valor</th>
-                <th>Data</th>
-                <th>Categorias</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="d in despesas">
-                <td>{{d.cdDespesa}}</td>
-                <td>{{d.vlDespesa}}</td>
-                <td>{{d.dtDespesa}}</td>
-                <td>{{d.stCategorias}}</td>
-            </tr>
-        </tbody>
-    </table>
+    <ul class="lista">
+        <li ng-repeat="d in despesas">
+            <ul class="item">
+                <li class="valor">R$: {{d.vlDespesa}}</li>
+                <li class="data">{{d.dtDespesa}}</li>
+                <li class="categoria">{{d.stCategorias}}</li>
+            </ul>
+        </li>
+    </ul>
+    <!--            <table>
+                    <thead>
+                        <tr>
+                            <th class="id">#</th>
+                            <th class="valor">Valor</th>
+                            <th class="data">Data</th>
+                            <th class="categoria">Categorias</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="d in despesas">
+                            <td class="id">{{d.cdDespesa}}</td>
+                            <td class="valor">{{d.vlDespesa}}</td>
+                            <td class="data">{{d.dtDespesa}}</td>
+                            <td class="categoria"><p>{{d.stCategorias}}</p></td>
+                        </tr>
+                    </tbody>
+                </table>-->
 </div>
-<style>
-    .header{
-        height: 44px;
-    }
-</style>
