--- a/www/templates/adicionar.html
+++ b/www/templates/adicionar.html
@@ -1,8 +1,8 @@
 <div class="adicionar">
     <div class="title">
         <a ng-href="#/home" class="button-left icon ion-chevron-left">Voltar</a>
-        <span class="titulo">Despesa</span> 
-        <span class="button-right icon ion-checkmark-round" ng-click="adicionar()" ng-show="vlDespesa > 0 && categoria.stCategoria.length > 1">Feito</span>
+        <span class="titulo">{{title}}</span> 
+        <span class="button-right icon ion-checkmark-round" ng-click="adicionar()" ng-show="vlDespesa > 0">Feito</span>
     </div>
     <div class="page">
         <div class="input-icon">
