--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -4,7 +4,7 @@
     </div>
     <div class="page">
         <div class="graficos">
-            <div rn-carousel rn-carousel-control rn-carousel-indicator>
+            <div rn-carousel rn-carousel-indicator>
                 <div class="grafico active">
                     <div id="chartdiv-geral" class="chart"></div>
                 </div>
@@ -24,9 +24,9 @@
                     <a class="middle">+</a>
                 </span>
             </div>
-            <div class="button-double button-receitas">
+            <div class="button-double button-receitas" ng-click="goTo('/receita/visualizar')">
                 <a class="">Receitas</a>
-                <span class="button-plus">
+                <span class="button-plus" ng-click="goTo('/receita/adicionar')">
                     <span class="middle">+</span>
                 </span>
             </div>
