--- a/www/templates/visualizar.html
+++ b/www/templates/visualizar.html
@@ -1,7 +1,8 @@
 <div class="visualizar">
     <div class="title">
         <a ng-href="#/home" class="button-left icon ion-chevron-left">Voltar</a>
-        <span class="titulo">Despesas</span> 
+        <span class="titulo">{{title}}</span> 
+        <a ng-href="#/despesa/adicionar" class="button-right">Adicionar</a>
     </div>
     <ul class="lista">
         <li ng-repeat="d in despesas">
@@ -23,7 +24,7 @@
                     </thead>
                     <tbody>
                         <tr ng-repeat="d in despesas">
-                            <td class="id">{{d.cdDespesa}}</td>
+                            <td class="id">{{d.cdTransacao}}</td>
                             <td class="valor">{{d.vlDespesa}}</td>
                             <td class="data">{{d.dtDespesa}}</td>
                             <td class="categoria"><p>{{d.stCategorias}}</p></td>
