--- a/www/templates/adicionar.html
+++ b/www/templates/adicionar.html
@@ -1,4 +1,4 @@
-<div class="adicionar">
+<div class="adicionar" ng-class="classe">
     <div class="title">
         <a ng-href="#/home" class="button-left icon ion-chevron-left">Voltar</a>
         <span class="titulo">{{title}}</span> 
