--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -19,20 +19,20 @@
         </div>
         <div class="buttons">
             <div class="button-double button-despesas" ng-click="goTo('/despesa/visualizar')">
-                <a>Despesas</a>
+                <p>Despesas</p>
                 <span class="button-plus" ng-click="goTo('/despesa/adicionar')">
                     <a class="middle">+</a>
                 </span>
             </div>
             <div class="button-double button-receitas" ng-click="goTo('/receita/visualizar')">
-                <a class="">Receitas</a>
+                <p>Receitas</p>
                 <span class="button-plus" ng-click="goTo('/receita/adicionar')">
                     <span class="middle">+</span>
                 </span>
             </div>
-            <div class="button-double button-sobre">
+<!--            <div class="button-double button-sobre">
                 <a class="">Sobre</a>
-            </div>
+            </div>-->
         </div>
 
     </div>
